# MAI_OS_laba_1_with_Titow_archivator

./: .gitignore  CMakeLists.txt  GUI.cpp  IVAN_dbass_unit_file.md  ImageMatrix.cpp  Makefile  Matrix.cpp  MyThread.cpp  README.md  RGBCell.cpp  TBytesArray.cpp  TBytesArray.h  TBytesArrayFiller.cpp  TBytesArrayFiller.h  TCommand.h  TCryptographer.cpp  TCryptographer.h  TDBusCommander.py  TFileOpener.py  TInputParser.py  TMessage.cpp  TMessage.h  TParser.cpp  TParser.h  TProcesser.cpp  TProcesser.h  TProcessesWorker.cpp  TProcessesWorker.h  TQueue.cpp  TQueue.h  TTerminal.cpp  TTerminal.h  TTxtReader.cpp  TTxtReader.h  TTxtWriter.cpp  TTxtWriter.h  archivate.c  dearchivate.c  main.c  main.cpp  (+10 more)
directory_for_compression/: marshe.txt
directory_for_compression/soviet_songs/: den_pobedy.txt
directory_for_compression/soviet_songs/goal/goal/: goal.txt
headers/: GUI.h  ImageMatrix.h  Matrix.h  MyThread.h  RGBCell.h  TCore.h  archivator.h  archivator_by_IVAN.h  console_functions.h  errors_codes.h  sobelsFilter.h  sobolsFilter.h  tree.h  tree_by_IVAN.h
src/: archivator.c  archivator_by_IVAN.c  console_functions.c  main.c  tree.c  tree_by_IVAN.c
